changes for Order Module

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "reddy-ice",
+  "name": "crm-app",
   "version": "1.0.0",
-  "description": "ReddyIce",
+  "description": "Stylox CRM",
   "author": "",
   "repository": {
     "type": "git"
