--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "jquery-slimscroll": "1.3.8",
     "karma": "^4.1.0",
     "lodash": "4.17.4",
-    "multiple-select": "^1.2.1",
+    "multiple-select": "^1.2.3",
     "ng2-completer": "^2.0.8",
     "ng2-slim-loading-bar": "^4.0.0",
     "ng2-smart-table": "^1.4.0",
@@ -76,6 +76,7 @@
     "rxjs": "6.5.2",
     "rxjs-compat": "^6.0.0-rc.0",
     "select2": "^4.0.3",
+    "tether": "^1.4.7",
     "tslib": "^1.9.0",
     "zone.js": "0.8.29"
   },
